Fix site title bottom margin and fix top nav bottom padding on mobile. (#11)

--- a/asset/sass/_mobile.scss
+++ b/asset/sass/_mobile.scss
@@ -96,10 +96,14 @@ header {
     padding: $spacing-m $spacing-l;
 }
 
+header h1 {
+    margin-bottom: 0;
+}
+
 #top-nav>ul {
     display: block;
     overflow: scroll;
-    padding-bottom: $spacing-l;
+    padding-bottom: 4 * $spacing-l;
 }
 
 #top-nav ul ul ul li {
